# grace

./: .gitignore  Cargo.toml  README.md  migrations.toml
.github/workflows/: ci.yml
deepgram-rust-sdk/: Cargo.toml
deepgram-rust-sdk/src/: lib.rs
deepgram-rust-sdk/src/transcription/: live.rs
deepgram-rust-sdk/src/transcription/prerecorded/: response.rs
src/: audiofile.rs  main.rs  self_update.rs  session.rs
