[package]
edition = "2021"
name = "scarlett"
publish = false
rust-version = "1.72"
version = "0.1.0"

[dependencies]
async-openai = "0.18"
byteorder = "1"
bytes = "1"
cpal = "0.15"
crossbeam = "0.8.0"
deepgram = {path = "deepgram-rust-sdk"}
eframe = {version = "0.26", default-features = false, features = ["default_fonts", "glow", "persistence"]}
egui = "0.26"
egui_extras = {version = "0.26", features = ["image"]}
ehttp = "0.4"
env_logger = "0.11"
futures = "0.3"
hound = "3"
image = {version = "0.24", default-features = false, features = ["jpeg", "png"]}
log = "0.4"
once_cell = "1"
poll-promise = {version = "0.3", default-features = false}
serde = {version = "1.0.196", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# turbosql = 

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
