[package]
edition = "2021"
name = "scarlett"
publish = false
rust-version = "1.72"
version = "0.1.0"

[dependencies]
async-openai = "0.18" 
byteorder = "1" 
bytes = "1" 
cpal = "0.15" 
crossbeam = "0.8" 
deepgram = {path = "deepgram-rust-sdk"} 
eframe = {version = "0.25", default-features = false, features = ["default_fonts", "glow", "persistence"]} 
egui = "0.25" # egui_node_graph uses 0.25
egui_extras = {version = "0.25", features = ["image"]} 
egui_node_graph = {git = "https://github.com/trevyn/egui_node_graph", branch = "node-zoom-trevyn"} 
ehttp = "0.5" 
env_logger = "0.11" 
futures = "0.3" 
hound = "3" 
image = {version = "0.24", default-features = false, features = ["jpeg", "png"]} 
log = "0.4" 
once_cell = "1" 
poll-promise = {version = "0.3", default-features = false} 
regex = "1" 
reqwest = "0.11" 
rfd = "0.14" 
serde = {version = "1.0.196", features = ["derive"]} 
serde_json = "1" 
stream-cancel = "0.8" 
tokio = {version = "1", features = ["full"]} 
tracked = "0.5" 
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"} 

# this can be removed when updating to egui 0.26
[target.'cfg(any(target_os = "windows"))'.dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
# turbosql = 

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
